--- a/matte/trunk/build.xml
+++ b/matte/trunk/build.xml
@@ -293,6 +293,7 @@
 				<exclude name="README*"/>
 				<exclude name="*.jar"/>
 				<exclude name="context.xml"/>
+				<exclude name="unit-test.properties"/>
 			</fileset>
 		</copy>
 	</target>
@@ -705,16 +706,240 @@
 		</svn>
 	</target>
 	
-	<target name="svn-build" depends="clean" description="Build from SVN tag versions">
+	<!-- Copy environment properties (to catch local env) -->
+	<target name="svn-prepare">
+		<mkdir dir="${svn.dir.build}/${dir.env}"/>
+		<copy todir="${svn.dir.build}/${dir.env}">
+			<fileset dir="${dir.base}/${dir.env}" includes="**" excludes="README*"/>
+		</copy>
+	</target>
+
+	<target name="svn-build" depends="clean,svn-prepare" description="Build from SVN tag versions">
+		
+		<property name="app.archive.name" value="${app.name}-${svn.tag}"/>
+		
 		<echo />
 		<echo message="Building application version ${svn.tag} (${svn.revision})..."/>
 
 		<ant dir="${svn.dir.build}" target="war" inheritall="true">
 			<property name="build.version" value="${svn.tag}"/>
 			<property name="dir.build" value="${dir.build}"/>
-			<property name="app.name" value="${app.name}-${svn.tag}"/>
+			<property name="app.name" value="${app.archive.name}"/>
 			<property name="env.src" value="${svn.env.src}"/>
 		</ant>
+	</target>
+	
+	<target name="svn-demo-release" description="Create the Live Demo from SVN sources"
+		depends="clean,init">
+		
+		<property name="app.archive.name" value="${app.name}-${svn.tag}"/>
+		<property name="demo.build.dir" value="${app.archive.name}-livedemo"/>
+		
+		<!-- call the demo target on the code checked out from SVN -->
+		<ant dir="${svn.dir.build}" inheritall="true" target="demo">
+			<property name="dir.build" value="${dir.build}"/>
+			<property name="build.version" value="${svn.tag}"/>
+			<property name="env.src" value="demo"/>
+		</ant>
+		
+		<!-- copy licenses -->
+		<echo message="Copying licenses" />
+		<mkdir dir="${dir.build}/${demo.build.dir}/licenses"/>
+		<copy todir="${dir.build}/${demo.build.dir}/licenses" flatten="true">
+			<fileset dir="${svn.dir.build}/defs/docs/licenses" includes="**/*.txt"/>
+			<mapper type="glob" from="*.txt" to="*"/>
+			<filterset>
+				<filter token="VERSION" value="${svn.tag}" />
+				<filter token="BUILD_DATE" value="${build.time}" />
+			</filterset>
+		</copy>
+		
+		<!-- copy demo build -->
+		<echo message="Copying demo build into SVN tar structure"/>
+		<copy todir="${dir.build}/${demo.build.dir}">
+			<fileset dir="${dir.build}/${app.name}-demo" includes="**"/>
+		</copy>
+		
+		<!-- fix file permissions -->
+		<chmod perm="755">
+			<fileset dir="${dir.build}/${demo.build.dir}">
+				<include name="**/*.sh"/>
+			</fileset>
+		</chmod>
+		
+		<!-- tar it up -->
+		<tar destfile="${dir.dist}/${app.archive.name}-livedemo.tbz2" 
+				compression="bzip2" longfile="gnu">
+			<tarfileset dir="${dir.build}" mode="775">
+				<include name="${demo.build.dir}/**/*.sh"/>
+			</tarfileset>
+			<tarfileset dir="${dir.build}">
+				<include name="${demo.build.dir}/**"/>
+				<exclude name="${demo.build.dir}/**/*.sh"/>
+			</tarfileset>
+		</tar>
+	</target>
+
+	<target name="svn-src-release" 
+		description="Build source release TAR from SVN tag versions">
+
+		<property name="app.archive.name" 
+			value="${app.name}-${svn.tag}"/>
+		<property name="release-source-dir-name"
+			value="${app.archive.name}-src"/>
+		<property name="release-source-dir" 
+			value="${dir.build}/${release-source-dir-name}" />
+		<property name="release-source-name" 
+			value="${dir.dist}/${app.archive.name}-src.tbz2" />
+
+		<echo message="Building source release ${release-source-name}" />
+
+		<mkdir dir="${dir.dist}"/>
+		<delete dir="${release-source-dir}" />
+		<delete file="${release-source-name}" />
+
+		<echo message="Creating source README" />
+		<copy file="${svn.dir.build}/defs/docs/release/README.src.txt" 
+			tofile="${release-source-dir}/README" filtering="true">
+			<filterset>
+				<filter token="VERSION" value="${svn.tag}" />
+				<filter token="BUILD_DATE" value="${build.time}" />
+			</filterset>
+		</copy>
+
+		<echo message="Copying source to tar base directory" />
+		<copy todir="${release-source-dir}">
+			<fileset dir="${svn.dir.build}">
+				<include name="**" />
+				<include name=".*" />
+				<exclude name="build/**" />
+				<exclude name="dist/**" />
+				<exclude name="environment/local/**" />
+			</fileset>
+		</copy>
+
+		<tar tarfile="${release-source-name}" compression="bzip2" 
+			longfile="gnu">
+			<tarfileset dir="${dir.build}" 
+				includes="${release-source-dir-name}/**" />
+		</tar>
+	</target>
+	
+	<!-- create binary release -->
+	<target name="svn-bin-release" description="Build binary release TAR from SVN tag versions"
+		depends="svn-build">
+		
+		<property name="release-dir-name"
+			value="${app.archive.name}"/>
+		<property name="release-dir" 
+			value="${dir.build}/${release-dir-name}" />
+		<property name="release-name" 
+			value="${dir.dist}/${app.archive.name}.tbz2" />
+
+		<echo message="Building binary release ${release-name}" />
+
+		<delete dir="${release-dir}" />
+		<delete file="${release-name}" />
+
+		<echo message="Creating README" />
+		<copy file="${svn.dir.build}/defs/docs/release/README.bin.txt" 
+			tofile="${release-dir}/README" filtering="true">
+			<filterset>
+				<filter token="VERSION" value="${svn.tag}" />
+				<filter token="BUILD_DATE" value="${build.time}" />
+			</filterset>
+		</copy>
+
+		<echo message="Creating NOTES" />
+		<copy filtering="true" todir="${release-dir}">
+			<fileset dir="${svn.dir.build}/defs/docs/release/notes"
+				includes="notes-${svn.tag}.txt"/>
+			<mapper type="merge" to="NOTES"/>
+			<filterset>
+				<filter token="VERSION" value="${svn.tag}" />
+				<filter token="BUILD_DATE" value="${build.time}" />
+			</filterset>
+		</copy>
+
+		<!-- create setup scripts -->
+		<echo message="Creating setup scripts" />
+		<mkdir dir="${release-dir}/setup/sql"/>
+		<copy filtering="false" todir="${release-dir}/setup/sql">
+			<fileset dir="${svn.dir.build}/defs/sql"
+				includes="**"/>
+		</copy>
+		<copy filtering="false" todir="${release-dir}/setup">
+			<fileset dir="${svn.dir.build}/environment/example"
+				includes="environmentContext*.xml"/>
+		</copy>
+		<mkdir dir="${release-dir}/scripts"/>
+		<copy todir="${release-dir}/scripts">
+			<fileset dir="${svn.dir.build}/defs/scripts"
+				includes="*.applescript"/>
+		</copy>
+		
+		<!-- copy JDBC drivers -->
+		<echo message="Copying JDBC drivers" />
+		<mkdir dir="${release-dir}/setup/lib"/>
+		<copy todir="${release-dir}/setup/lib">
+			<fileset dir="${svn.dir.build}/lib/jdbc"
+				includes="**"/>
+		</copy>
+
+		<!-- copy misc README files -->
+		<echo message="Copying README files" />
+		<copy filtering="true" todir="${release-dir}">
+			<fileset dir="${svn.dir.build}/defs/docs"
+				includes="README-*.txt"/>
+			<mapper type="glob" from="*.txt" to="*"/>
+			<filterset>
+				<filter token="VERSION" value="${svn.tag}" />
+				<filter token="BUILD_DATE" value="${build.time}" />
+			</filterset>
+		</copy>
+		
+		<!-- copy licenses -->
+		<echo message="Copying licenses" />
+		<mkdir dir="${release-dir}/licenses"/>
+		<copy todir="${release-dir}/licenses" flatten="true">
+			<fileset dir="${svn.dir.build}/defs/docs/licenses" includes="**/*.txt"/>
+			<mapper type="glob" from="*.txt" to="*"/>
+			<filterset>
+				<filter token="VERSION" value="${svn.tag}" />
+				<filter token="BUILD_DATE" value="${build.time}" />
+			</filterset>
+		</copy>
+		
+		<!-- copy war, removing version from name -->
+		<copy file="${dir.build}/${app.archive.name}.war" 
+			tofile="${release-dir}/${app.name}.war"/>
+
+		<!-- tar it alll up -->
+		<mkdir dir="${dir.dist}"/>
+		<tar tarfile="${release-name}" compression="bzip2" longfile="gnu">
+			<tarfileset dir="${dir.build}" 
+				includes="${release-dir-name}/**">
+			</tarfileset>
+		</tar>
+
+	</target>
+	
+	<target name="svn-javadoc" depends="svn-prepare"
+		description="Build the JavaDocs from SVN tag versions">
+
+		<echo />
+		<echo message="Building JavaDocs for version ${cvs.build.version}..."/>
+
+		<ant dir="${svn.dir.build}" target="javadoc" inheritall="no">
+			<property name="build.version" value="${svn.tag}"/>
+			<property name="dir.build" value="${dir.build}"/>
+			<property name="dir.javadoc" value="${dir.javadoc}"/>
+			<property name="dir.env" value="${dir.env.defaults}"/>
+			<property name="dir.dist" value="${dir.dist}"/>
+			<property name="app.name" value="${app.name}"/>
+		</ant>
+	
+		<echo message="JavaDocs built to ${dir.javadoc}"/>
 	</target>
 	
 	<target name="demo" description="Create the Live Demo">
@@ -789,7 +1014,7 @@
 				includes="README*.txt"/>
 			<mapper type="glob" from="*.txt" to="*"/>
 			<filterset>
-				<filter token="VERSION" value="${cvs.build.version}" />
+				<filter token="VERSION" value="${build.version}" />
 				<filter token="BUILD_DATE" value="${build.time}" />
 			</filterset>
 		</copy>
