--- a/build.xml
+++ b/build.xml
@@ -149,6 +149,7 @@
 
 	<target name="init">
 		<mkdir dir="${dir.build}" />
+		<mkdir dir="${dir.dist}" />
 		<mkdir dir="${dir.generated}" />
 	</target>
 	
