Add web service implementation to get list of user collections, for Matte iPhoto Export plugin.

--- a/matte/trunk/web/WEB-INF/web.xml
+++ b/matte/trunk/web/WEB-INF/web.xml
@@ -171,6 +171,10 @@
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>Compression Filter</filter-name>
+		<url-pattern>/home.do</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>Compression Filter</filter-name>
 		<url-pattern>/album.do</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
