More work on upload applet.

--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" output="web/applet" path="src-applet"/>
+	<classpathentry kind="src" output="build/eclipse" path="src-applet"/>
 	<classpathentry kind="src" path="environment/local"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
