--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v5.5"/>
 	<classpathentry kind="lib" path="lib/swing-layout-1.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta-commons/commons-httpclient-3.1.jar" sourcepath="lib/jakarta-commons/commons-httpclient-3.1-src.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
