--- a/ivy.xml
+++ b/ivy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0">
-	<info organisation="Tidbits" module="Web"/>
+	<info organisation="Matte" module="Web"/>
 	<configurations>
 		<conf name="compile" visibility="public" description="Build dependencies"/>
 		<conf name="runtime" visibility="public" description="Matte"/>
@@ -10,63 +10,14 @@
 	</configurations>
 	<dependencies defaultconfmapping="jdbc->runtime(default);demo-tomcat->runtime(default);test->runtime(default);runtime->runtime(default);compile->compile(default)">
 		
-		<!-- Graphics -->
-		<dependency org="batik" name="batik" rev="1.6-1" conf="compile,runtime"/>
-		<dependency org="org.im4java" name="im4java" rev="1.2.0" conf="compile,runtime"/>
-		
-		<!-- Util -->
-		<dependency org="net.sf.ehcache" name="ehcache" rev="1.3.0" conf="runtime"/>
-		<dependency org="gnu-regexp" name="gnu-regexp" rev="1.1.4" conf="compile,runtime"/>
-		<dependency org="com.drewnoakes" name="metadata-extractor" rev="2.6.2" conf="compile,runtime"/>
-		<dependency org="opensymphony" name="quartz" rev="1.6.3" conf="runtime"/>
-		
-		<!-- Lucene -->
-		<dependency org="org.apache.lucene" name="lucene-core" rev="2.2.0" conf="compile,runtime">
-    		<artifact name="lucene-core" type="jar" />
-		</dependency>
-		<dependency org="org.apache.lucene" name="lucene-snowball" rev="2.2.0" conf="compile,runtime">
-			<artifact name="lucene-snowball" type="jar" />
-		</dependency>
-		
-		<!-- JDBC -->
-		<dependency org="org.hibernate" name="hibernate" rev="3.2.6.ga" conf="compile,runtime"/>
-		<dependency org="org.apache.derby" name="derby" rev="10.8.2.2" conf="test,demo-tomcat,jdbc"/>
-		<dependency org="mysql" name="mysql-connector-java" rev="5.1.18" conf="test,jdbc"/>
-		<dependency org="postgresql" name="postgresql" rev="9.1-901-1.jdbc4" conf="test,jdbc"/>
-		
 		<!-- Logging -->
 		<dependency org="log4j" name="log4j" rev="1.2.16" conf="compile,runtime"/>
 		<dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="runtime"/>
 		
-		<!-- Spring -->
-		<dependency org="org.springframework" name="spring-aop" rev="2.5.6.SEC01" conf="compile,runtime"/>
-		<dependency org="org.springframework" name="spring-context" rev="2.5.6.SEC01" conf="compile,runtime"/>
-		<dependency org="org.springframework" name="spring-core" rev="2.5.6.SEC01" conf="compile,runtime"/>
-		<dependency org="org.springframework" name="spring-orm" rev="2.5.6.SEC01" conf="compile,runtime"/>
-		<dependency org="org.springframework" name="spring-webmvc" rev="2.5.6.SEC01" conf="compile,runtime"/>
-		
-		<!-- JAXB, XML -->
-		<dependency org="dom4j" name="dom4j" rev="1.6.1" conf="runtime"/>
-		<dependency org="com.sun.xml.bind" name="jaxb-impl" rev="1.0.6" conf="compile,runtime"/>
-		<dependency org="org.jvnet.jaxbcommons" name="jaxbcommons-core" rev="1.0.4.7" conf="compile,runtime"/>
-		<dependency org="org.jvnet.hyperjaxb2" name="hyperjaxb2-core" rev="0.6.5" conf="compile,runtime"/>
-		<dependency org="org.codehaus.woodstox" name="wstx-asl" rev="3.2.9" conf="compile,runtime"/>
-		<dependency org="net.sf.saxon" name="Saxon-HE" rev="9.6.0-3" conf="compile,runtime"/>
-		
-		<!-- Web runtime -->
-		<dependency org="com.sun.mail" name="javax.mail" rev="1.4.4" conf="compile"/>
-		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="compile,runtime"/>
-		<dependency org="javax.servlet.jsp" name="jsp-api" rev="2.1" conf="compile"/>
-		<dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="compile"/>
-
-		<!-- Web Service support -->
-		<dependency org="org.apache.ws.commons.axiom" name="axiom-impl" rev="1.2.14" conf="runtime"/>
-		<dependency org="org.springframework.ws" name="spring-ws-core" rev="1.5.9" conf="compile,runtime"/>
-		<dependency org="org.springframework.ws" name="spring-ws-security" rev="1.5.9" conf="compile,runtime"/>
-		<dependency org="org.apache.ws.security" name="wss4j" rev="1.5.11" conf="runtime"/>
-		<dependency org="com.sun.xml.wss" name="xws-security_jaxrpc" rev="2.0-FCS" conf="runtime"/>
-		
-		<!-- Specific versions of some libraries -->
+		<!-- Utilities -->
+		<dependency org="net.sf.ehcache" name="ehcache" rev="1.3.0" conf="runtime"/>
+		<dependency org="gnu-regexp" name="gnu-regexp" rev="1.1.4" conf="compile,runtime"/>
+		<dependency org="com.drewnoakes" name="metadata-extractor" rev="2.6.2" conf="compile,runtime"/>
 		<dependency org="javax.activation" name="activation" rev="1.1.1"  conf="compile,runtime"/>
 		<dependency org="asm" name="asm" rev="2.2.3" conf="compile,runtime"/>
 		<dependency org="cglib" name="cglib" rev="2.2.2" conf="compile,runtime"/>
@@ -82,6 +33,62 @@
 		<dependency org="commons-lang" name="commons-lang" rev="2.2" conf="runtime"/>
 		<dependency org="commons-pool" name="commons-pool" rev="1.2" conf="runtime"/>
 		
+		<!-- JAXB, XML -->
+		<dependency org="xerces" name="xercesImpl" rev="2.11.0" conf="compile,runtime"/>
+		<dependency org="dom4j" name="dom4j" rev="1.6.1" conf="runtime"/>
+		<dependency org="com.sun.xml.bind" name="jaxb-impl" rev="1.0.6" conf="compile,runtime"/>
+		<dependency org="org.jvnet.jaxbcommons" name="jaxbcommons-core" rev="1.0.4.7" conf="compile,runtime"/>
+		<dependency org="org.jvnet.hyperjaxb2" name="hyperjaxb2-core" rev="0.6.5" conf="compile,runtime"/>
+		<dependency org="org.codehaus.woodstox" name="wstx-asl" rev="3.2.9" conf="compile,runtime"/>
+		<dependency org="net.sf.saxon" name="Saxon-HE" rev="9.6.0-3" conf="compile,runtime"/>
+		<dependency org="org.apache.ws.commons.schema" name="XmlSchema" rev="1.4.7" conf="runtime"/>
+		
+		<!-- Graphics -->
+		<dependency org="batik" name="batik-parser" rev="1.6-1" conf="compile,runtime"/>
+		<dependency org="batik" name="batik-rasterizer" rev="1.6-1" conf="compile,runtime"/>
+		<dependency org="batik" name="batik-svg-dom" rev="1.6-1" conf="compile,runtime"/>
+		<dependency org="batik" name="batik-xml" rev="1.6-1" conf="compile,runtime"/>
+		<dependency org="org.im4java" name="im4java" rev="1.2.0" conf="compile,runtime"/>
+		
+		<!-- Lucene -->
+		<dependency org="org.apache.lucene" name="lucene-core" rev="2.2.0" conf="compile,runtime">
+    		<artifact name="lucene-core" type="jar" />
+		</dependency>
+		<dependency org="org.apache.lucene" name="lucene-snowball" rev="2.2.0" conf="compile,runtime">
+			<artifact name="lucene-snowball" type="jar" />
+		</dependency>
+		
+		<!-- JDBC -->
+		<dependency org="javax.transaction" name="jta" rev="1.0.1B" conf="runtime"/>
+		<dependency org="org.hibernate" name="hibernate" rev="3.2.6.ga" conf="compile,runtime"/>
+		<dependency org="org.apache.derby" name="derby" rev="10.8.2.2" conf="test,demo-tomcat,jdbc"/>
+		<dependency org="mysql" name="mysql-connector-java" rev="5.1.18" conf="test,jdbc"/>
+		<dependency org="postgresql" name="postgresql" rev="9.1-901-1.jdbc4" conf="test,jdbc"/>
+		
+		<!-- Services -->
+		<dependency org="opensymphony" name="quartz" rev="1.6.3" conf="runtime"/>
+		
+		<!-- Spring -->
+		<dependency org="org.springframework" name="spring-aop" rev="2.5.6.SEC01" conf="compile,runtime"/>
+		<dependency org="org.springframework" name="spring-context" rev="2.5.6.SEC01" conf="compile,runtime"/>
+		<dependency org="org.springframework" name="spring-core" rev="2.5.6.SEC01" conf="compile,runtime"/>
+		<dependency org="org.springframework" name="spring-orm" rev="2.5.6.SEC01" conf="compile,runtime"/>
+		<dependency org="org.springframework" name="spring-webmvc" rev="2.5.6.SEC01" conf="compile,runtime"/>
+		
+		<!-- Web runtime -->
+		<dependency org="com.sun.mail" name="javax.mail" rev="1.4.4" conf="compile"/>
+		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="compile,runtime"/>
+		<dependency org="javax.servlet.jsp" name="jsp-api" rev="2.1" conf="compile"/>
+		<dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="compile"/>
+
+		<!-- Web Service support -->
+		<dependency org="org.apache.ws.commons.axiom" name="axiom-impl" rev="1.2.14" conf="runtime"/>
+		<dependency org="org.springframework.ws" name="spring-ws-core" rev="1.5.9" conf="compile,runtime"/>
+		<dependency org="org.springframework.ws" name="spring-ws-security" rev="1.5.9" conf="compile,runtime"/>
+		<dependency org="org.apache.santuario" name="xmlsec" rev="2.0.2" conf="runtime"/>
+		<dependency org="org.apache.ws.security" name="wss4j" rev="1.5.11" conf="runtime"/>
+		<dependency org="com.sun.xml.wss" name="xws-security_jaxrpc" rev="2.0-FCS" conf="runtime"/>
+		
 		<!-- Unit test support -->
 		<dependency org="org.testng" name="testng" rev="6.5.1" conf="test">
 			<artifact name="testng" type="jar" />
@@ -93,5 +100,9 @@
 		<dependency org="org.mortbay.jetty" name="jetty" rev="6.1.26" conf="test">
     		<artifact name="jetty" type="jar" />
 		</dependency>
+		
+		<!-- Global excludes -->
+		<exclude module="xmldsig"/>
+		<exclude module="jaxp-api"/>
 	</dependencies>
 </ivy-module>
